--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Privacy Policy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1, h2 {
+      color: #222;
+    }
+    p {
+      margin: 10px 0;
+    }
+    ul {
+      margin: 10px 20px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Privacy Policy</h1>
+  <p><strong>Effective Date:</strong> [Insert Effective Date]</p>
 
+  <h2>Introduction</h2>
+  <p>
+    This Privacy Policy explains how [Your App Name] ("we", "our", or "us") collects, uses, discloses, and safeguards your information when you use our application and services. By accessing or using our services, you agree to this Privacy Policy.
+  </p>
+
+  <h2>Information We Collect</h2>
+  <p>
+    We may collect the following types of information:
+  </p>
+  <ul>
+    <li><strong>Personal Information:</strong> Your name, email address, and other details you voluntarily provide.</li>
+    <li><strong>Usage Data:</strong> Information about how you access and use our services.</li>
+  </ul>
+
+  <h2>How We Use Your Information</h2>
+  <p>
+    We use your information for purposes including:
+  </p>
+  <ul>
+    <li>Providing and maintaining our services</li>
+    <li>Improving our services and developing new features</li>
+    <li>Communicating with you, including responding to inquiries</li>
+    <li>Ensuring the security of our services</li>
+  </ul>
+
+  <h2>Sharing Your Information</h2>
+  <p>
+    We do not sell or share your personal information with third parties for their own marketing purposes. We may share your information with trusted partners who help us provide our services, subject to confidentiality agreements.
+  </p>
+
+  <h2>Security</h2>
+  <p>
+    We take reasonable measures to protect your information from unauthorized access, use, or disclosure.
+  </p>
+
+  <h2>Your Rights</h2>
+  <p>
+    Depending on your location, you may have rights regarding your personal information, including access, correction, or deletion. Please contact us if you have any questions or wish to exercise your rights.
+  </p>
+
+  <h2>Changes to This Privacy Policy</h2>
+  <p>
+    We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.
+  </p>
+
+  <h2>Contact Us</h2>
+  <p>
+    If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:support@yourapp.com">support@yourapp.com</a>.
+  </p>
+</body>
+</html>
