--- a/privacy.html
+++ b/privacy.html
@@ -24,11 +24,11 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> [Insert Effective Date]</p>
+  <p><strong>Effective Date:</strong> 06/03/25</p>
 
   <h2>Introduction</h2>
   <p>
-    This Privacy Policy explains how [Your App Name] ("we", "our", or "us") collects, uses, discloses, and safeguards your information when you use our application and services. By accessing or using our services, you agree to this Privacy Policy.
+    This Privacy Policy explains how Zarya Singapore ("we", "our", or "us") collects, uses, discloses, and safeguards your information when you use our application and services. By accessing or using our services, you agree to this Privacy Policy.
   </p>
 
   <h2>Information We Collect</h2>
@@ -73,7 +73,7 @@
 
   <h2>Contact Us</h2>
   <p>
-    If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:support@yourapp.com">support@yourapp.com</a>.
+    If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:zarya.global@gmail.com">zarya.global@gmail.com</a>.
   </p>
 </body>
 </html>
